# silly_bot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
files/: moby_parse.py  mobypos2.txt  mobypos_utf8.txt  nouns.txt  to_utf8.py
src/: lib.rs  main.rs
src/sillinesses/: mod.rs  nouns_lower.txt  you_are_a.rs
