[package]
name = "silly_bot"
version = "0.1.0"
edition = "2021"
authors = "Raphael Darley <raphael@raphaeldarley.com>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {default-features = false, features = ["client", "gateway", "model", 
          "rustls_backend"], version = "0.11.6"}
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
